Allow all CORS origins for debugging